divide TS files to modules

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -62,10 +62,10 @@
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
     /* Advanced Options */
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
-  }
-  // "include": [
-  //   "index.ts"
-  // ],
+  },
+  "include": [
+    "./src"
+  ],
   // "exclude": [
   //   "**/compiler.ts",
   //   "*.spec.ts",
